<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit_test</name>
  <version>0.0.0</version>
  <description>Package for testing moveit in aprs_ros2_demo</description>
  <maintainer email="joseph.fernandez@nist.gov">Joseph Fernandez</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>python3-pykdl</depend>
  <depend>aprs_interfaces</depend>
  <depend>motoros2_interfaces</depend>
  <depend>control_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
